--- a/auth-back/.env
+++ b/auth-back/.env
@@ -3,3 +3,6 @@ ACCESS_TOKEN_SECRET = 7438940c-8b4d-47ec-8e0a-9b1f427e25e2
 POSTGRES_DB_URI=postgres://postgres:postgres@localhost:5432/authdb
 FORGOT_PASSWORD_SECRET = 65bf1950-d4be-4f37-a001-1e7170fda414
 FRONTEND_URL = http://localhost:3000
+
+NODEMAILER_USER = sifytulkarim37@gmail.com
+NODEMAILER_PASSWORD	= kxzfsfjnhrhbnnmx
