--- a/auth-back/package.json
+++ b/auth-back/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "graphql": "^16.8.0",
     "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^3.1.2",
     "nodemailer": "^6.9.4",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
