--- a/auth-back/.env
+++ b/auth-back/.env
@@ -1,8 +1,8 @@
-REFRESH_TOKEN_SECRET = 9ae90761-92eb-4d39-90f4-6c862c19394a
-ACCESS_TOKEN_SECRET = 7438940c-8b4d-47ec-8e0a-9b1f427e25e2
-POSTGRES_DB_URI=postgres://postgres:postgres@localhost:5432/authdb
-FORGOT_PASSWORD_SECRET = 65bf1950-d4be-4f37-a001-1e7170fda414
+REFRESH_TOKEN_SECRET = 9ae9fsd761-92eb-4d3sfs9-90f4sf-6c862sfd19394a
+ACCESS_TOKEN_SECRET = 74389df40c-8bsfd4d-sf47ec-d8e0a-9b1fsfd27e25e2
+POSTGRES_DB_URI = postgres://postgres:postgres@localhost:5432/authdb
+FORGOT_PASSWORD_SECRET = 65bffds1950-fd4be-4vff37-a0fv01-1e71v0fda414
 FRONTEND_URL = http://localhost:3000
 
-NODEMAILER_USER = sifytulkarim37@gmail.com
-NODEMAILER_PASSWORD	= kxzfsfjnhrhbnnmx
+NODEMAILER_USER = 'youremail@address.com'
+NODEMAILER_PASSWORD	= 'yourpassword'
